# python-LimeReport

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  bindings.h  bindings.xml  init.py  main.py  pyproject.toml  pyside_config.py  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  extra.sh
.github/: install_deps.sh  repair_wheel.sh  setup_wheels_env.sh
.github/workflows/: wheels.yml
build_scripts/: pyi_generator.py  set-qt-constraint.py
cibuildwheel/: auditwheel_repair_options.sh  before_all.sh  before_build.py  before_build.sh  exclude_list.txt
patches/: 001_correct_version.patch  002_author_info.patch
scripts/: bump_version.py
