[build-system]
requires = [
    "cmake>=3.18",
    "setuptools>=42",
    "wheel",
    "--extra-index-url=https://python-limereport.github.io/pypi/",
    "shiboken6==6.4.2",
    "PySide6==6.4.2",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-all = "cibuildwheel/before_all.sh"
build-verbosity = 1