[metadata]
version = 1.7.4.post1
home_page = https://github.com/python-LimeReport/python-LimeReport
description = Python bindings for LimeReport
author = Maxim Slipenko
author_email = python-limereport@maks1ms.anonaddy.com
long_description = file: README.md
long_description_content_type = text/markdown